# canvas-course-gamification

./: .env.example  .env.pages  .gitignore  AUTONOMOUS_SESSION_SUMMARY.md  AUTONOMOUS_SYSTEMS_OVERVIEW.md  CANVAS_INTEGRATION_GUIDE.md  CANVAS_INTEGRATION_STATUS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SETUP_COMPLETE.md  GAMIFICATION_EVOLUTION_PLAN.md  GITHUB_SETUP_PLAN.md  LICENSE  PHASE_2_COMPLETION_SUMMARY.md  PRODUCTION_README.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SECURITY.md  SERVER_ACCESS_FIXED.md  app.py  canvas_api_test.py  course_builder_cli.py  demo.py  demo_canvas_config.yml  demo_canvas_integration.py  demo_complete_system.py  demonstrate_platform.py  deploy.py  deploy_canvas_integration.py  find_table_issues.py  fix_outcomes.py  fix_table_accessibility.py  generate_github_pages.py  integration_summary.py  main.py  preview_simple.py  pyproject.toml  (+16 more)
.github/: AGENT_ENTRY_TEST.md  AI_AGENT_AUTO_ASSIGNMENT.md  AI_AGENT_COMMAND_CENTER.md  AI_AGENT_COMMAND_CENTER_V5.md  AI_AGENT_IMPLEMENTATION_GUIDE.md  AI_AGENT_INIT.md  AI_AGENT_SELECTOR.md  IMPLEMENTATION_SUCCESS.md  LESSONS_LEARNED.md  PROJECT_STATUS.md  README.md  VICTORY_STATUS_REPORT.md  labels.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_new.md  feature_request.md  task.md
.github/ai-personas/: ai-ml-specialist.md  data-scientist.md  devops-engineer.md  educational-specialist.md  fullstack-developer.md  mobile-developer.md  qa-engineer.md  security-specialist.md  ux-designer.md
.github/archive/: AI_AGENT_COMMAND_CENTER.md  AI_AGENT_GUIDE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  DR_LYNCH_CASE_STUDY.md  IMPLEMENTATION_COMPLETE.md  PROJECT_MANAGEMENT.md  PROJECT_MANAGEMENT_SUMMARY.md  PROJECT_STATUS.md
.github/scripts/: activate-agent.sh  agent-git.sh
.github/workflows/: autonomous_ai_operations.yml  ci.yml  course-automation.yml  deploy-to-pages.yml  release.yml
analytics/: skill_tree_report.txt
config/: .oauth_encryption_key  .privacy_encryption_key  ai_personas_config.yml  api_config.yml  automation_config.yml  canvas_integration_template.yml  course_settings.yml  demo_portal_config.yml  gamification.yml  math231_skill_tree.yml  mobile_interface_config.yml  privacy_analytics_config.yml  staging_deployment_config.yml
data/: course_templates.db
data/content/: curated_linear_algebra_20250704.json  learning_path_1e59783a-ba40-4212-82e1-770240802a04.json
data/math231/: assignment_id_map.json  assignments.json  modules.json  outcomes.json  quizzes.json
data/onboarding/: faculty_profiles.json  onboarding_sessions.json
data/research/06c187e0-f1ec-4928-a3c4-4976f68bd8ba/: project_config.json
data/research/0c55cad4-e574-4f93-8d0c-2bdd3183792a/: project_config.json
data/research/68716d24-1596-48a0-99b0-a334e2470fe3/: project_config.json
data/research/7388ed1b-64d6-4bb7-93bd-5d118d46145b/: project_config.json
data/research/8cdb5e7f-c73a-47d8-a1c6-1f096b32eae9/: project_config.json
data/research/c21b6d5c-ca7d-4b4e-8048-99669bfe52df/: project_config.json
data/research/d54e3849-b3b3-4b1e-91a5-466adea10a89/: project_config.json
docs/: 404.html  _config.yml  api_reference.md  customization.md  index.html  instructor_guide.md  json_integration.md  sitemap.xml  test-report.html  user_guide.md
docs/faculty_onboarding/: level_1_beginners_guide.md  level_2_speed_run_guide.md
docs/mobile-demo/: index.html
examples/: README.md  programming_101.json
examples/clients/: comparative_analysis.md  faculty_demo_report.json  faculty_demonstration.py  integration_system.py
examples/clients/3blue1brown/: README.md  visual_learning_engine.py
examples/clients/dr_lynch_ewu/: README.md  adaptive_paths.py  dr_lynch_computer_science_path.json  dr_lynch_data_science_path.json  dr_lynch_engineering_path.json  dr_lynch_mathematics_path.json  dr_lynch_youtube_content.json  prerequisite_tree.yml  youtube_integration.py
examples/clients/khan_academy/: README.md  microlearning_engine.py
examples/linear_algebra/: assignments.json  modules.json  outcomes.json  pages.json  quizzes.json
examples/linear_algebra/quizzes/: quiz_week_1.json
output/: math231_preview.html  simple_preview.html
scripts/project-management/: README.md  create_current_issues.py  github_integration.py  github_project_manager.py  local_issue_manager.py  workflow_manager.py
scripts/project-management/issues/: 00_issues_summary.json  (+55 more)
scripts/research/: academic_publication_generator.py
scripts/testing/: ai_personas.py  ai_personas_enhanced.py
src/: __init__.py  cli.py  preview_generator.py
src/ai_personas/: advanced_personas.py
src/analytics/: privacy_respecting_analytics.py
src/automation_controller/: master_controller.py
src/canvas_api/: __init__.py  course_manager.py
src/canvas_integration/: live_connector.py
src/content/: curation_engine.py
src/course_builder/: __init__.py  data_loader.py  json_course_builder.py  math231_builder.py
src/course_templates/: linear_algebra_template.py
src/deployment/: staging_deployment.py
src/gamification/: __init__.py
src/gamification_engine/: __init__.py
src/mobile/: mobile_interface.py
src/onboarding/: faculty_automation.py  student_automation.py
src/public/: demo_portal.py
src/research/: analytics_automation.py
src/security/: __init__.py  api_rate_limiter.py  oauth_manager.py  privacy_protection.py
src/templates/: course_preview.html
src/validators/: __init__.py
templates/: 404.html  500.html  admin_dashboard.html  base.html  course_dashboard.html  create_course.html  index.html  join_course.html  student_portal.html
tests/: conftest.py
tests/fixtures/: test_assignment_id_map.json  test_assignments.json  test_modules.json  test_outcomes.json  test_pages.json  test_prerequisites.json  test_quizzes.json
tests/integration/: test_math231_integration.py
tests/unit/: test_data_loader.py  test_gamification.py  test_json_course_builder.py  test_performance.py
tools/: canvas_data_importer.py  requirements.txt  skill_tree_analyzer.py
(+18 files in other folders)
