[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-course-gamification"
version = "1.0.0"
description = "Framework for creating gamified Canvas LMS courses"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jessica Doner", email = "jdoner@ewu.edu"},
]
keywords = [
    "canvas",
    "lms", 
    "gamification",
    "education",
    "skill-tree",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "canvasapi>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "Flask>=3.0.0",
    "pandas>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/jdoner02/canvas-course-gamification"
Repository = "https://github.com/jdoner02/canvas-course-gamification.git"
"Bug Reports" = "https://github.com/jdoner02/canvas-course-gamification/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
